# xnix

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  release  release.sh  run
sdk/: CMakeLists.txt
sdk/include/xnix/: errno.h
sdk/include/xnix/abi/: cap.h  errno.h  framebuffer.h  handle.h  input.h  io.h  ipc.h  irq.h  perm.h  process.h  protocol.h  syscall.h  tty.h  types.h
sdk/include/xnix/driver/: ioport.h  irq.h
sdk/include/xnix/protocol/: blk.h  chardev.h  console.h  devfs.h  displaydev.h  fb.h  input.h  inputdev.h  kbd.h  mouse.h  serial.h  sudo.h  svc.h  tty.h  udm_errno.h  user.h  vfs.h  ws.h
sdk/lib/: crt0.s
user/: CMakeLists.txt  app.cmake  core_services.conf  crt0.s  init.c  seriald.c  sys.conf  user.ld  user_services.conf
user/apps/: CMakeLists.txt
user/apps/installer/: CMakeLists.txt  main.c  service.conf
user/apps/login/: CMakeLists.txt  main.c
user/apps/shell/: CMakeLists.txt  line.c  line.h  main.c  path.c  path.h  service.conf
user/apps/sudo/: CMakeLists.txt  main.c
user/apps/sudod/: CMakeLists.txt  main.c
user/apps/test_gui/: CMakeLists.txt  main.c
user/demo/: CMakeLists.txt
user/demo/crashme/: main.c
user/demo/hello/: main.c
user/demo/hello4/: main.c
user/demo/pthread_test/: main.c
user/demo/user_thread_test/: main.c
user/demos/: CMakeLists.txt
user/demos/hello/: main.c
user/drivers/: CMakeLists.txt
user/drivers/display/: CMakeLists.txt  main.c  vga.c  vga.h
user/drivers/displayd/: CMakeLists.txt  main.c
user/drivers/fatfs/: ata.c  ata.h  diskio.c  diskio_mem.h  fatfs_vfs.c  fatfs_vfs.h  main.c
user/drivers/fatfsd/: CMakeLists.txt  ata.c  ata.h  diskio.c  fatfs_vfs.c  fatfs_vfs.h  main.c  service.conf
user/drivers/fb/: main.c
user/drivers/fbcond/: CMakeLists.txt  main.c  service.conf
user/drivers/fbd/: CMakeLists.txt  main.c  service.conf
user/drivers/kbd/: CMakeLists.txt  main.c  scancode.c  scancode.h  service.conf
user/drivers/moused/: CMakeLists.txt  main.c  ps2.c  ps2.h
user/drivers/ps2/: CMakeLists.txt  main.c  ps2_mouse.c  ps2_mouse.h  scancode.c  scancode.h
user/drivers/ps2d/: CMakeLists.txt  main.c
user/drivers/ramfsd/: CMakeLists.txt  app.cmake  main.c  ramfs.c  ramfs.h  service.conf
user/drivers/rootfsd/: CMakeLists.txt  app.cmake  diskio.c  fatfs_vfs.c  main.c  service.conf
user/drivers/serial/: main.c  serial.c
user/drivers/seriald/: CMakeLists.txt  main.c  serial.c  serial.h  service.conf
user/drivers/vgad/: CMakeLists.txt  main.c  vga.c  vga.h
user/etc/: passwd
user/init/: caps.conf  core_services.conf  early_console.c  early_console.h  ini_parser.c  ini_parser.h  initramfs.c  initramfs.h  initramfs_tar.c  main.c  ramfs.c  ramfs.h  ramfsd_service.c  ramfsd_service.h  svc_manager.c  svc_manager.h
user/init/bootstrap/: bootstrap.h  exec.c  fat32_reader.c
user/init/svc/: svc_admin.c  svc_config.c  svc_graph.c  svc_handles.c  svc_internal.h  svc_notify.c  svc_runtime.c  svc_scheduler.c
user/libc/include/: stdarg.h  stdint.h  stdio.h  string.h
user/libc/include/xnix/: ipc.h  syscall.h
user/libc/src/: crt0.s
user/libc/src/stdio/: getchar.c  printf.c
user/libc/src/string/: memcpy.c  memmove.c  strcmp.c  strcpy.c
user/libpthread/: CMakeLists.txt
user/libpthread/src/: pthread.c  pthread_attr.c
user/libs/: CMakeLists.txt
user/libs/libblock/: lib.cmake
user/libs/libblock/include/: block.h
user/libs/libblock/src/: block.c
user/libs/libc/: lib.cmake
user/libs/libc/include/: acolor.h  errno.h  fcntl.h  signal.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdio_internal.h  stdlib.h  string.h  unistd.h  vfs_client.h
user/libs/libc/src/: crt0.S  crt0.s  env.c  errno.c  perm_api.c  svc_connect.c  svc_notify.c
user/libs/libd/: lib.cmake
user/libs/libd/src/: server.c
user/libs/libdriver/: lib.cmake
user/libs/libdriver/src/: chardev.c  displaydev.c  driver.c  driver_internal.h  inputdev.c
user/libs/libfont/: lib.cmake
user/libs/libfont/src/: font.c  font_ascii_8x16.c  utf8.c
user/libs/libipc/: lib.cmake
user/libs/libipc/src/: client.c  endpoint.c  server.c
user/libs/libposix/: lib.cmake
user/libs/libposix/include/: exec.h  spawn.h
user/libs/libposix/src/: spawn.c  wait.c
user/libs/libproc/: lib.cmake
user/libs/libproc/src/: proc.c
user/libs/libpthread/: lib.cmake
user/libs/libpthread/include/: pthread.h
user/libs/libpthread/src/: pthread.c  (+1 more)
user/libs/libserial/: lib.cmake
user/libs/libsys/: lib.cmake
user/libs/libudm/: lib.cmake
user/libs/libvfs/: lib.cmake
user/libs/libws/: lib.cmake
user/libudm/src/: server.c
user/servers/: CMakeLists.txt
user/servers/FatfsServer/: CMakeLists.txt  ata.c  main.c  service.conf
user/servers/FbServer/: main.c  service.conf
user/servers/KbdServer/: main.c  scancode.c  service.conf
user/servers/RamfsServer/: main.c  ramfs.c  service.conf
user/servers/RootfsServer/: CMakeLists.txt  main.c  service.conf
user/servers/SerialServer/: main.c  serial.c  serial.h  service.conf
user/servers/VfsServer/: VfsServer.if  main.c  service.conf
user/servers/console/: main.c
user/servers/consoled/: CMakeLists.txt  main.c
user/servers/devfs/: CMakeLists.txt  main.c
user/servers/devfsd/: CMakeLists.txt  main.c  service.conf
user/servers/klog/: CMakeLists.txt  main.c
user/servers/klogd/: CMakeLists.txt  main.c  service.conf
user/servers/syslogd/: CMakeLists.txt  main.c
user/servers/term/: CMakeLists.txt  main.c
user/servers/termd/: CMakeLists.txt  main.c
user/servers/ttyd/: CMakeLists.txt  main.c  service.conf
user/servers/userd/: CMakeLists.txt  main.c  passwd.c  passwd.h  session.c  session.h
user/servers/vfs/: CMakeLists.txt  main.c
user/servers/vfsserver/: CMakeLists.txt  main.c  service.conf
user/servers/ws/: compositor.c  compositor.h  cursor.c  cursor.h  input.c  main.c  wsd.h
user/servers/wsd/: CMakeLists.txt  compositor.c  cursor.c  cursor.h  input.c  input.h  main.c  window.c  window.h  wsd.h
user/tplibs/: .clang-format  CMakeLists.txt  README.md
user/tplibs/ff16/: CMakeLists.txt  diskio.h  ff.c  ff.h  ffconf.h
(+418 files in other folders)
